# constrained-attacks

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  fig2.py  fig3.py  fig4.py  fig_constraints.py  fig_eps.py  fig_steps.py  fig_time.py  package_zip.sh  progress.md  pyproject.toml  requirements.txt  sankey.py  sankey2.py  setup.cfg
comet/: __init__.py  comet_config.py
constrained_attacks/: __init__.py  ensemble.py  graphics.py  typing.py
constrained_attacks/attacks/: __init__.py
constrained_attacks/constraints/: __init__.py  backend.py  constraints.py  constraints_backend_executor.py  constraints_checker.py  constraints_executor.py  constraints_fixer.py  constraints_operator.py  constraints_operator_tf.py  constraints_parser.py  file_constraints.py  new_constraints.py  numpy_backend.py  pytorch_backend.py  relation_constraint.py  utils.py
constrained_attacks/datasets/: __init__.py  core.py  ctu_13_neris.py  lcld_v2_dataset.py  malware_dataset.py  processing.py  url_dataset.py  wids_dataset.py
constrained_attacks/objective_calculator/: cache_objective_calculator.py  objective_calculator.py
constrained_attacks/run/: attack.py  attack_cfab.py  attack_moeva.py
constrained_attacks/utils/: __init__.py  autoload.py  metrics.py  stopwatch.py  utils_sgm.py
constrained_evasion/attacks/: __init__.py
constrained_evasion/classifier/: classifier.py  tensorflow_classifier.py
constrained_evasion/constraints/: constraints.py  constraints_operator.py  file_constraints.py
constrained_evasion/objective_calculator/: __init__.py  cache_objective_calculator.py  objective_calculator.py
constrained_evasion/utils/: __init__.py  classifier.py
data/mcl_torchrln__apgd_1691409334.810074_/: adv_0.pt
data/mcl_torchrln__fab_1691409402.8231862_/: adv_0.pt
data/mcl_torchrln__pgdl2_1691408786.8370433_/: adv_0.pt
data/mcl_torchrln__pgdl2_1691408951.06283_/: adv_0.pt
experiments/: README.md
experiments/fig/: beautify_data.py  beautify_latex.py  captions.py  download.py  fig2.py  fig3.py  fig4.py  fig_constraints.py  fig_eps.py  fig_steps.py  fig_time.py  format.py  new_plot.py  numbering.py  plot_neurips.py  preprocess.py  (+7 more)
jobs/: launch-cpu.sh  many_seed.sh  performance.sh  scenarioA.sh  scenarioA1.sh  scenarioA1_adv.sh  scenarioA1_all.sh  scenarioA1_default.sh  scenarioA2.sh  scenarioA2_adv.sh  scenarioA2_all.sh  scenarioA2_default.sh  scenarioA_B_time.sh  scenarioA_EPS.sh  scenarioA_constraints.sh  scenarioA_steps.sh  scenarioB.sh  scenarioB1_all.sh  scenarioB2_all.sh  scenarioB_EPS.sh  scenarioB_inner.sh  scenarioC.sh  scenarioC1_all.sh  scenarioC2_all.sh  scenarioD.sh  scenarioE.sh  scenarioF_test.sh  scenario_EPS.sh
run/: performance.py  scenarioA.py  scenarioA1.py  scenarioA2.py  scenarioB.py  scenarioB1.py  scenarioB2.py  scenarioB_LGV.py  scenarioC.py  scenarioC1.py  scenarioC2.py
tests/: test_constrained_evasion.py  test_model_preformance.py  test_select_k_best.py
(+117 files in other folders)
