[tool.poetry]
name = "constrained-evasion"
version = "0.1.0"
description = ""
authors = ["Thibault Simonetto <thibault.simonetto.001@student.uni.lu>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^3.0.0"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
