[tool.poetry]
name = "constrained-attacks"
version = "0.1.2"
description = "constrained-attacks is a framework to generate adversarial examples under domain specific constraints."
authors = ["Thibault Simonetto <thibault.simonetto.001@student.uni.lu>"]
license = "MIT"
readme="README.md"

[tool.poetry.dependencies]
python = "~3.8"
numpy = "^1.22.3"
joblib = "^1.1.0"
pymoo = "^0.5.0"
tqdm = "^4.63.1"
pandas = "^1.4.1"
adversarial-robustness-toolbox = {version = "1.10", extras = ["tensorflow"], optional=true}
tensorflow = {version ="2.8", optional=true}

[tool.poetry.extras]
tensorflow = ["tensorflow", "adversarial-robustness-toolbox"]


[tool.poetry.dev-dependencies]
pytest = "7.1.2"
pytest-cov = "^3.0.0"
pre-commit = "^2.17.0"
flake8 = "^4.0.1"
black = {version = "^22.1.0", allow-prereleases = true}
mypy = "^0.941"
isort = "^5.10.1"
scikit-learn = "^1.0.2"
pip-licenses = "^3.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
profile = "black"
line_length = 79
